# gram-discord-presence

./: Cargo.toml  README.md  extension.toml  flake.nix
.github/workflows/: release.yml
assets/: languages.json
docs/: configuration.md
lsp/: Cargo.toml
lsp/src/: discord.rs  document.rs  error.rs  git.rs  idle.rs  languages.rs  logger.rs  main.rs
lsp/src/activity/: fields.rs  mod.rs
lsp/src/config/: activity.rs  idle.rs  mod.rs  presence.rs  rules.rs  update.rs  workspace_override.rs
lsp/src/service/: file_monitor.rs  mod.rs  presence_service.rs  workspace_service.rs
lsp/src/util/: mod.rs  placeholders.rs
lsp/tests/: integration_test.rs
nix/: formatter.nix
src/: discord_presence.rs
